Change package name to avoid conflict in uutils

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "users"
+name = "rust-users"
 description = "Library for getting information on Unix users and groups"
 
 authors = [ "ogham@bsago.me" ]
